Use StandardCharsets (#166)
* Use StandardCharsets

This allows for removing the try/catch statements.

Signed-off-by: Wouter Born <github@maindrain.net>